Dancer 1.xxx
    [ Gabor Szabo ]
    * Docs fixes, typo in warning.
    * TestUtils.pm is now in "t/lib".

Dancer 1.173_01 (Developer release)
    [ Franck Cuny ]
    * Doc fixes.
      (Thanks to poisonbit)
    * Plugins configuration
    * Cleaning up tests

	[ Alexis Sukrieh ]
	* New serializer: Dumper for easily output dumped variable 
	  in text/plain.
	* Before filters can now access route params
    * Support for '.' as a token separator in params parsing
	* The standalone server respect the 'access_log' setting, 
	  the starting banner is printed on STDERR only if the 
	  setting is set to true.

    [ Sawyer X ]
    * Fixed Windows PSGI.URL_SCHEME bug, causing tests to fail
      (Thanks to ADAMK for reporting)

Dancer 1.173
    [ Alexis Sukrieh ]
    * Documenting set_cookie in Dancer.pm.

    [ Franck Cuny ]
    * Cleaning up serializer test.

    [ François Charlier ]
    * Documenting layout disabling.

    [ Sawyer X ]
    * Fix a few failing tests because of compilation errors.
    * Add init{} subs for all serializers.
    * Dancer::Engine documentation

    [ David Precious ]
    * Fix issue 52 - creating invalid cookie expiration dates.
      Thanks to Juanjo (reidrac) for reporting!

Dancer 1.172
    [ Alexis Sukrieh ]
    * Plugin support.

    [ Franck Cuny ]
    * Prevent usage of reserved Dancer keywords in plugins.
    * Tests cleanups.

    [ Robert Olson ]
    * Fixing docs to clarify layouts can use variables too.

Dancer 1.171
    [ Alexis Sukrieh ]
    * Removed bogus TestApp/ directory

Dancer 1.170
    [ David Precious ]
    * Fixed bug with status keyword not converting aliases (e.g. 'not_found') to
      real usable status lines with valid HTTP codes.
      Thanks to P Kishor for reporting this on the dancer-users mailing list!
    * Accept end_tag as a synonym for stop_tag when configuring TemplateToolkit.
      Thanks to James Ronan for bringing this up.

    [ Sawyer X]
    * Route::Cache store_route = store_path, beefed up docs